--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@skbhati199/js-lib",
+  "name": "skbhati199-js-lib-demo",
   "version": "0.0.1",
   "private":false,
   "description": "A set of JavaScript Utils",
